fix horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ body {
   font-size: 1rem;
   font-weight: 500;
   color: var(--clr-neutral-400);
-  overflow-x: clip;
 }
 
 h1,
